# Swiftlogic-Ecom-Agent

./: .dockerignore  .gitattributes  .gitignore  AUDIT_REPORT.md  DEMO.md  Dockerfile  FINAL_ALIGNMENT_AUDIT.md  HACKATHON_ALIGNMENT.md  PROJECT_REPORT.md  README.md  ROADMAP.md  [External] Apr ‘26 OpenEnv Hackathon Themes.md  __init__.py  ecom_env.py  full_system_fix_plan_64f0bc81.plan.md  grpo_single_cell_colab_v5.py  grpo_single_cell_colab_v6.ipynb  grpo_single_cell_colab_v6.py  inference.py  openenv.yaml  openenv_path.txt  pyproject.toml  requirements.txt  scripted_demo.py  swiftlogic_FINAL_master_roadmap.txt  swiftlogic_grpo_training.ipynb  test_env.py  validate-submission.sh
artifacts/: after_metrics.json  baseline_heuristic.json  baseline_random.json  baseline_wait_only.json  baseline_zero_shot_llm.json  before_metrics.json  composite_score.json  failure_vs_recovery.json  generalization.json  hard_seed_retraining.json  pipeline_manifest.json  policy_signature.json  run_config.json  scripted_demo.json  task_baselines.json  training_log.txt
configs/: medplus_pharmacy.json  siyaani_fashion.json  siyaani_fashion_demo.json  siyaani_fashion_easy.json  stackbase_saas.json
demo/: __init__.py  app.py  artifact_loader.py  backend_client.py  components.py  entry.py  episode_runner.py  live_theater.py  policy.py  sections.py  store_theme.css  story_tab.py  theme.css
env/: __init__.py  actions.py  constants.py  demand_model.py  invariants.py  reward_engine.py  supplier_agent.py  ticket_system.py  validators.py  world_engine.py
scripts/: baselines.py  check_env_frozen.py  (+11 more)
(+34 files in other folders)
