[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commerce-ops-env"
version = "1.0.0"
description = "AI Autonomous Startup Operator Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "pydantic",
    "openai",
    "uvicorn",
    "fastapi"
]

[project.scripts]
server = "server.app:main"
