[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commerce-ops-v2"
version = "2.0.0"
description = "Swiftlogic CommerceOps v2 - Autonomous AI Startup Operator (Meta x Scaler OpenEnv Hackathon Finale)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.1",
    "pydantic>=2.0.0",
    "openai",
    "requests",
    "uvicorn",
    "fastapi",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pillow>=10.0",
    "gradio>=5,<6"
]

[project.scripts]
server = "server.app:main"

[tool.pyright]
include = ["."]
extraPaths = ["."]
